# radial-flow

./: .gitignore  ASYMPTOTIC_VS_PATH_EXPLANATION.md  CMakeLists.txt  EPSILON_EXTRAPOLATION_REPORT.md  EPSILON_STABILITY_REPORT.md  LEADING_ORDER_CONSISTENCY_REPORT.md  PACKAGE_MANIFEST.txt  PACKAGE_README.md  PHASE_CORRECTION_ANALYSIS.md  PROJECT_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  RSTAR_INTEGRATION_RESULTS.md  analyze_asymptotic_vs_path.py  build.sh  compare_phase_corrections.py  demo.py  example_usage.py  quick_test.py  test_epsilon_extrapolation.py  test_epsilon_stability.py  test_fixed.py  test_phase_correction.py  test_phase_correction_v2.py  test_rstar_integration.py  verify_leading_order_consistency.py  visualize_epsilon_extrapolation.py  visualize_epsilon_stability.py  径向流(check) (1).tex
.claude/: settings.local.json
docs/: CONVERGENCE_FIX_SUMMARY.md  FIX_COMPLETION_REPORT.md  FREQUENCY_SWEEP_RESULTS.md  README.md  (+6 more)
radial_flow_package/: .gitignore  BUGFIX_2026-02-05.md  CHANGELOG.md  CMakeLists.txt  INSTALL.txt  QUICK_RESULTS.txt  README.md  build.sh  demo.py  example_usage.py  quick_test.py
radial_flow_package/include/: radial_flow.hpp
radial_flow_package/python/: radial_flow.py
radial_flow_package/src/: bindings.cpp  radial_flow.cpp
spec_flow_method/: DOCUMENTATION.md  README.md  pyproject.toml  径向流(check)(1)(1).lyx  格林函数（齐次拼接）.nb
spec_flow_method/examples/: run_case.py
spec_flow_method/src/schw_matcher/: __init__.py  chebyshev.py  flow.py  matching.py  params.py  solver.py  spectral.py
spec_flow_method/tests/: smoke_test.py
(+57 files in other folders)
